--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>LeanCloud评论管理</title>
+    <title>评论管理 | LHK's Blog</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="https://cdn.jsdelivr.net/gh/xaoxuu/cdn-favicon@19.9.6/favicon-32x32.png">
 </head>
 <body>
 
 <div class="sign-in-wrap">
-    <p class="title">LeanCloud评论管理</p>
+    <p class="title">Valine 后台评论管理系统</p>
     <form method="post" action="/login" class="gh-signin">
         <input tabindex="1" name="username"
                placeholder="管理员邮箱" autofocus="" type="text" class="gh-input">
@@ -15,7 +16,7 @@
 
         <input tabindex="3" type="submit" class="login-button" value="登录">
     </form>
-    <div class="footer"><p><a href="https://panjunwen.com">By Deserts</a></p></div>
+    <div class="footer"><p>Back to <a href="https://blog.lhkstudio.me">LHK's Blog</a></p></div>
 </div>
 </body>
 </html>
